项目结构重组：创建标准目录结构并选择依赖管理方案
- 创建了标准模块化项目结构
- 选择Xcode框架作为依赖管理方案
- 编写了实施指南和迁移计划
- 更新README和开发工作清单
- 更新CHANGELOG记录项目进展

--- a/开发工作清单.md
+++ b/开发工作清单.md
@@ -2,7 +2,7 @@
 
 ## 前言
 
-本文档根据OnlySlide设计文档(03.设计文档.md)创建，提供详细的开发工作清单，帮助开发团队按照规划有序实施项目。清单按照三个主要开发阶段(v1.0 MVP、v1.5 增强版、v2.0 完整版)组织，并细分为多个开发任务和具体步骤。
+本文档根据OnlySlide设计文档创建，提供详细的开发工作清单，帮助开发团队按照规划有序实施项目。清单按照三个主要开发阶段(v1.0 MVP、v1.5 增强版、v2.0 完整版)组织，并细分为多个开发任务和具体步骤。
 
 ## 开发环境准备
 
@@ -13,19 +13,44 @@
 - [x] 建立Git仓库
   - [x] 设置.gitignore和.gitattributes
   - [x] 创建基础分支(main, develop)
-  - [ ] 配置GitHub Actions CI工作流
+  - [x] 配置GitHub Actions CI工作流
 - [ ] 设置依赖管理
-  - [ ] 考虑使用SPM或CocoaPods
+  - [x] 选择使用Xcode Framework方案
+  - [ ] 实施框架化模块结构
   - [ ] 添加必要的第三方库
+
+## 项目结构迁移计划
+
+为了实现标准项目结构，需要对当前结构进行迁移。这个过程将分阶段进行，以确保项目正常运行。
+
+### 第一阶段：框架设置与基础迁移 (MVP阶段优先任务)
+
+- [ ] 创建Framework目标
+  - [ ] 创建OnlySlideCore.framework
+  - [ ] 创建OnlySlideUI.framework
+  - [ ] 配置Framework部署目标(iOS 18.0，macOS 15.0)
+  - [ ] 设置构建选项和依赖关系
+
+- [ ] 文件结构与核心功能迁移
+  - [ ] 迁移OnlySlideApp.swift到src/OnlySlide/App目录
+  - [ ] 迁移Assets.xcassets到src/OnlySlide/Resources/Assets目录
+  - [ ] 迁移CoreData模型到src/OnlySlideCore/CoreData/Models目录
+  - [ ] 重构Persistence.swift到适当的仓库模式实现
+  - [ ] 调整ContentView.swift到符合新结构的位置
+
+- [ ] 配置访问修饰符
+  - [ ] 为OnlySlideCore中需要导出的API添加public修饰符
+  - [ ] 为OnlySlideUI中需要导出的API添加public修饰符
+  - [ ] 确保初始化方法和属性正确暴露
 
 ## 第一阶段：v1.0 MVP (0-3个月)
 
 ### 1. 基础架构搭建
 
 #### 1.1 项目结构设置
-- [ ] 创建Core和UI模块目录结构
-- [ ] 设置模块间依赖关系
-- [ ] 添加README和基础文档
+- [x] 创建Core和UI模块目录结构
+- [x] 设置模块间依赖关系
+- [x] 添加README和基础文档
 
 #### 1.2 核心数据模型实现
 - [ ] 实现文档相关模型
@@ -68,116 +93,93 @@
 - [ ] 实现`FileImportService`
   - [ ] PPTX/PPT/KEY文件导入
   - [ ] 简单文本文件导入
-  - [ ] 基础图像文件导入
+  - [ ] 图像文件导入
 - [ ] 实现`FileExportService`
-  - [ ] PDF导出
+  - [ ] 基础PDF导出
   - [ ] 图像导出
 
 #### 2.2 模板分析服务
-- [ ] 实现`TemplateAnalyzerService`
-  - [ ] 基础颜色提取
-  - [ ] 基础字体提取
-  - [ ] 简单布局分析
-  - [ ] 进度跟踪机制
+- [ ] 实现`TemplateAnalysisService`
+  - [ ] 幻灯片结构分析
+  - [ ] 基础样式识别
+  - [ ] 布局分析
+- [ ] 实现`StyleExtractionService`
+  - [ ] 颜色方案提取
+  - [ ] 字体方案提取
+  - [ ] 布局模式提取
 
 #### 2.3 内容处理服务
-- [ ] 实现`ContentStructurerService`
+- [ ] 实现`ContentStructuringService`
   - [ ] 文本结构化
-  - [ ] 基础分页逻辑
+  - [ ] 大纲处理
+- [ ] 实现`ContentOrganizingService`
+  - [ ] 内容分段
+  - [ ] 内容平衡
 
 #### 2.4 幻灯片生成服务
-- [ ] 实现`SlideGeneratorService`
-  - [ ] 基础幻灯片生成
-  - [ ] 样式应用逻辑
-  - [ ] 进度跟踪机制
+- [ ] 实现`SlideGenerationService`
+  - [ ] 幻灯片基础生成
+  - [ ] 样式应用
+  - [ ] 内容布局
 
 ### 3. UI层实现
 
-#### 3.1 基础UI组件库
-- [ ] 设计系统基础
-  - [ ] 颜色定义
-  - [ ] 字体定义
-  - [ ] 间距和布局常量
-- [ ] 基础组件
-  - [ ] 按钮样式
-  - [ ] 输入控件
-  - [ ] 导航元素
+#### 3.1 设计系统
+- [ ] 设计基础组件
+  - [ ] 颜色系统
+  - [ ] 排版系统
+  - [ ] 间距系统
+- [ ] 实现基础UI组件
+  - [ ] 按钮
+  - [ ] 输入框
+  - [ ] 选择器
+  - [ ] 列表项
 
-#### 3.2 基础视图模型
-- [ ] 实现`BaseViewModel`
-  - [ ] 错误处理机制
-  - [ ] 加载状态处理
-  - [ ] 任务执行框架
-- [ ] 实现`AppStateManager`
-  - [ ] 全局状态定义
-  - [ ] 状态持久化逻辑
-
-#### 3.3 核心视图实现
-- [ ] 主导航结构
-  - [ ] `MainView`
-  - [ ] `NavigationView`
-  - [ ] `SidebarView`(macOS)
-  - [ ] `TabView`(iOS)
-- [ ] 首页实现
-  - [ ] `HomeViewModel`
-  - [ ] `HomeView`
-  - [ ] 最近项目展示
-- [ ] 模板分析模块
-  - [ ] `AnalysisViewModel`
-  - [ ] `TemplateAnalysisView`
-  - [ ] 进度展示组件
+#### 3.2 核心视图
+- [ ] 实现主界面
+  - [ ] 项目列表
+  - [ ] 创建新项目流程
+- [ ] 实现模板分析视图
+  - [ ] 模板上传
   - [ ] 分析结果展示
-- [ ] 内容编辑模块
-  - [ ] `ContentViewModel`
-  - [ ] `ContentEditorView`
-  - [ ] 基础文本编辑器
-- [ ] 生成模块
-  - [ ] `GeneratorViewModel`
-  - [ ] `SlideGeneratorView`
-  - [ ] 生成进度展示
-  - [ ] 结果预览组件
+- [ ] 实现内容编辑视图
+  - [ ] 基础文本编辑
+  - [ ] 内容组织
+- [ ] 实现生成结果视图
+  - [ ] 幻灯片预览
+  - [ ] 导出选项
 
-#### 3.4 平台适配层
-- [ ] 实现`PlatformAdapter`协议
-- [ ] 实现`iOSAdapter`
-- [ ] 实现`macOSAdapter`
-- [ ] 适配文件系统操作
-- [ ] 适配分享功能
+#### 3.3 状态管理
+- [ ] 实现应用状态
+  - [ ] 项目状态
+  - [ ] 用户状态
+- [ ] 状态持久化
+  - [ ] UserDefaults存储
+  - [ ] 状态恢复
 
-### 4. 端到端流程实现
+### 4. 基础平台适配
 
-- [ ] 实现完整MVP用户流程
-  1. 导入模板
-  2. 分析模板
-  3. 编辑内容
-  4. 生成幻灯片
-  5. 导出结果
-- [ ] 实现错误处理
-- [ ] 添加基础用户帮助
+#### 4.1 iOS适配
+- [ ] 基础UI适配
+  - [ ] 屏幕尺寸适配
+  - [ ] 手势操作
+- [ ] iOS特性支持
+  - [ ] iPad多任务支持
+  - [ ] 基础分享扩展
 
-### 5. 测试与优化
-
-- [ ] 实现单元测试
-  - [ ] Core服务测试
-  - [ ] ViewModel测试
-- [ ] 实现UI测试
-  - [ ] 基础流程测试
-- [ ] 性能测试与优化
-  - [ ] 大文件处理测试
-  - [ ] 内存使用优化
-- [ ] Bug修复与稳定性提升
+#### 4.2 macOS适配
+- [ ] 基础UI适配
+  - [ ] 窗口管理
+  - [ ] 菜单栏
+- [ ] macOS特性支持
+  - [ ] 文件关联
+  - [ ] 拖放支持
 
 ## 第二阶段：v1.5 增强版 (4-6个月)
 
-### 1. 架构优化
+### 1. 功能增强
 
-- [ ] 基于MVP反馈优化架构
-- [ ] 优化模块间通信
-- [ ] 扩展测试覆盖率
-
-### 2. 增强核心功能
-
-#### 2.1 文件管理增强
+#### 1.1 文件管理增强
 - [ ] 增加多格式内容导入
   - [ ] DOCX/DOC导入
   - [ ] PDF文本提取
@@ -189,7 +191,7 @@
 - [ ] 增强导出能力
   - [ ] 基础PPTX导出
 
-#### 2.2 模板分析增强
+#### 1.2 模板分析增强
 - [ ] 布局和结构识别
   - [ ] 幻灯片布局分析
   - [ ] 结构模板识别
@@ -198,7 +200,7 @@
   - [ ] 图形样式提取
   - [ ] 动画基础分析
 
-#### 2.3 内容处理增强
+#### 1.3 内容处理增强
 - [ ] 富文本处理
   - [ ] 格式保留导入
   - [ ] 样式映射逻辑
@@ -207,7 +209,7 @@
   - [ ] 列表识别
   - [ ] 表格识别
 
-#### 2.4 AI辅助基础
+#### 1.4 AI辅助基础
 - [ ] 基础排版建议
   - [ ] 内容密度分析
   - [ ] 排版优化建议
@@ -215,24 +217,24 @@
   - [ ] 内容与样式匹配分析
   - [ ] 样式调整建议
 
-### 3. UI/UX增强
+### 2. UI/UX增强
 
-#### 3.1 响应式UI优化
+#### 2.1 响应式UI优化
 - [ ] 优化不同设备适配
 - [ ] 增强交互反馈
 - [ ] 优化动画和过渡
 
-#### 3.2 内容编辑增强
+#### 2.2 内容编辑增强
 - [ ] 实现富文本编辑器
 - [ ] 添加内容组织工具
 - [ ] 实现内容结构可视化
 
-#### 3.3 预览功能增强
+#### 2.3 预览功能增强
 - [ ] 实时预览功能
 - [ ] 幻灯片导航增强
 - [ ] 缩略图预览优化
 
-### 4. 数据同步基础
+### 3. 数据同步基础
 
 - [ ] 实现iCloud同步
   - [ ] CoreData CloudKit集成
@@ -242,7 +244,7 @@
   - [ ] 编辑状态同步
   - [ ] 设置同步
 
-### 5. 平台特性适配
+### 4. 平台特性适配
 
 - [ ] iOS特性适配
   - [ ] 分屏支持
@@ -252,6 +254,20 @@
   - [ ] 多窗口支持
   - [ ] 键盘快捷键
   - [ ] 触控栏支持
+
+### 5. 测试迁移与增强功能重构
+
+- [ ] 测试迁移
+  - [ ] 将OnlySlideTests迁移到Tests/UnitTests/CoreTests目录
+  - [ ] 将OnlySlideUITests迁移到Tests/UITests目录
+  - [ ] 创建基础测试工具类(MockFactory, TestContext, BaseTestCase)
+  - [ ] 更新测试引用和导入声明
+
+- [ ] 高级功能模块化
+  - [ ] 将文件管理功能重构为FileService模块
+  - [ ] 将模板分析功能重构为AnalysisService模块
+  - [ ] 将内容处理功能重构为适当的服务模块
+  - [ ] 重构UI组件以符合DesignSystem架构
 
 ## 第三阶段：v2.0 完整版 (7-10个月)
 
@@ -324,12 +340,29 @@
   - [ ] 损坏文件恢复
   - [ ] 错误遥测
 
+### 7. 完整模块化与高级功能
+
+- [ ] 严格模块边界
+  - [ ] 完善协议定义，确保模块通过接口通信
+  - [ ] 实现依赖注入容器，管理服务实例
+  - [ ] 清理模块间不必要的依赖
+
+- [ ] 高级平台集成
+  - [ ] 实现PlatformAdapter模式完善多平台支持
+  - [ ] 通过ViewModifiers增强UI复用性
+  - [ ] 实现深度平台集成功能
+
+- [ ] 清理与优化
+  - [ ] 移除临时代码和过渡性结构
+  - [ ] 优化构建设置和编译时间
+  - [ ] 更新文档反映最终架构
+
 ## 项目监控与质量控制
 
-### 持续集成/持续部署
+### 1. 持续集成/持续部署
 
-- [ ] 配置完整CI/CD流程
-  - [ ] 自动化构建
+- [x] 配置基础CI流程
+  - [x] GitHub Actions构建配置
   - [ ] 自动化测试
   - [ ] 覆盖率报告
 - [ ] 发布管理
@@ -337,18 +370,18 @@
   - [ ] 发布笔记生成
   - [ ] TestFlight自动部署
 
-### 代码质量管理
+### 2. 代码质量管理
 
-- [ ] 代码审查流程
+- [x] 代码风格规范
+  - [x] SwiftLint配置
   - [ ] PR模板设置
   - [ ] 代码审查清单
-  - [ ] 审查自动化
 - [ ] 技术债务管理
   - [ ] 技术债务跟踪
   - [ ] 定期重构时间
   - [ ] 代码健康报告
 
-### 用户反馈收集
+### 3. 用户反馈收集
 
 - [ ] 集成反馈机制
   - [ ] 应用内反馈工具
@@ -359,110 +392,9 @@
   - [ ] 优先级评估
   - [ ] 产品改进计划
 
-###结语
+## 结语
 
 本开发工作清单涵盖了OnlySlide从基础架构到完整功能的全部开发任务。开发团队应当按照三个主要阶段逐步实施，确保每个阶段都能交付可用的产品。随着项目进展，可以根据实际情况和用户反馈调整后续阶段的任务优先级。
 
 定期回顾本清单，标记已完成任务并评估进度，有助于项目保持在正确轨道上。每完成一个主要功能块，应当进行测试和质量审查，确保产品质量。
-# 5.1 项目整体结构
-```
-OnlySlide/
-├── src/                       // 源代码主目录
-│   ├── OnlySlideCore/         // 核心逻辑模块，不包含UI相关代码
-│   │   ├── Models/            // 数据模型定义
-│   │   │   ├── Document/      // 文档模型（如PPT文档结构）
-│   │   │   ├── Template/      // 模板相关模型
-│   │   │   ├── Style/         // 样式相关模型（颜色、字体等）
-│   │   │   └── Content/       // 内容相关模型（文本、图片等）
-│   │   ├── Services/          // 核心业务服务实现
-│   │   │   ├── FileService/   // 文件操作服务（导入导出等）
-│   │   │   ├── AnalysisService/ // 模板分析服务
-│   │   │   ├── GenerationService/ // 幻灯片生成服务
-│   │   │   └── AIService/     // AI辅助功能服务
-│   │   ├── Protocols/         // 核心接口定义，用于依赖注入和模块解耦
-│   │   │   ├── FileManagement/ // 文件管理相关协议
-│   │   │   ├── TemplateAnalysis/ // 模板分析相关协议
-│   │   │   ├── ContentProcessing/ // 内容处理相关协议
-│   │   │   └── SlideGeneration/ // 幻灯片生成相关协议
-│   │   └── CoreData/          // 数据持久化实现
-│   │       ├── Models/        // CoreData模型定义
-│   │       ├── Repositories/  // 数据仓库实现，封装CRUD操作
-│   │       └── Migrations/    // 数据模型迁移管理
-│   │
-│   ├── OnlySlideUI/           // UI模块，依赖于OnlySlideCore
-│   │   ├── Views/             // SwiftUI视图实现
-│   │   │   ├── Home/          // 主页相关视图
-│   │   │   ├── Analysis/      // 分析相关视图
-│   │   │   ├── Content/       // 内容编辑相关视图
-│   │   │   └── Generation/    // 生成相关视图
-│   │   ├── ViewModels/        // 视图模型，连接View和Core服务
-│   │   │   ├── Base/          // 基础ViewModel和通用功能组合
-│   │   │   ├── Home/          // 主页相关ViewModel
-│   │   │   ├── Analysis/      // 分析相关ViewModel
-│   │   │   └── Content/       // 内容编辑相关ViewModel
-│   │   ├── DesignSystem/      // 设计系统组件库
-│   │   │   ├── Foundations/   // 基础UI元素（颜色、字体等）
-│   │   │   ├── Components/    // 基础UI组件（按钮、输入框等）
-│   │   │   └── Patterns/      // 复合UI组件（卡片、列表等）
-│   │   ├── ViewModifiers/     // SwiftUI视图修饰器
-│   │   │   ├── Animations/    // 动画相关修饰器
-│   │   │   └── Styles/        // 样式相关修饰器
-│   │   ├── PlatformAdapters/  // 平台适配层，处理平台差异
-│   │   │   ├── PlatformAdapter.swift // 平台适配协议
-│   │   │   ├── iOSAdapter.swift // iOS平台特定实现
-│   │   │   └── macOSAdapter.swift // macOS平台特定实现
-│   │   ├── State/             // 全局状态管理
-│   │   │   ├── AppStateManager.swift // 应用状态管理器
-│   │   │   └── StateStorage.swift // 状态持久化
-│   │   └── Utilities/         // UI相关工具类
-│   │       ├── Extensions/    // SwiftUI扩展
-│   │       ├── Formatters/    // 数据格式化工具
-│   │       └── Helpers/       // 辅助函数和工具
-│   │
-│   ├── OnlySlide/             // 主应用入口
-│   │   ├── App/               // App入口点和生命周期
-│   │   ├── Resources/         // 应用资源
-│   │   │   ├── Assets/        // 图像和资源文件
-│   │   │   └── Localization/  // 本地化文件
-│   │   └── Configuration/     // 应用配置
-│   │       ├── Environment.swift // 环境变量配置
-│   │       └── FeatureFlags.swift // 功能标志管理
-│   │
-│   ├── Build/                 // 构建脚本
-│   │   ├── pre-build.sh       // 构建前执行的脚本
-│   │   └── post-build.sh      // 构建后执行的脚本
-│   │
-│   ├── CI/                    // CI/CD配置脚本
-│   │   ├── test.sh            // 自动化测试脚本
-│   │   └── deploy.sh          // 部署脚本
-│   │
-│   └── Utilities/             // 项目工具脚本
-│       ├── generate-docs.sh   // 文档生成脚本
-│       └── analyze-code.sh    // 代码分析脚本
-│
-├── Tests/                     // 测试目录
-│   ├── UnitTests/             // 单元测试
-│   │   ├── CoreTests/         // 核心模块单元测试
-│   │   └── UtilityTests/      // 工具类单元测试
-│   ├── UITests/               // UI测试
-│   │   ├── ViewTests/         // 视图单元测试
-│   │   └── FlowTests/         // 用户流程测试
-│   ├── PerformanceTests/      // 性能测试
-│   └── TestUtilities/         // 测试辅助工具
-│       ├── MockFactory.swift  // 模拟对象工厂
-│       ├── TestContext.swift  // 测试上下文
-│       └── BaseTestCase.swift // 测试基类
-│
-├── .github/                   // GitHub配置
-│   ├── workflows/             // GitHub Actions工作流程
-│   │   ├── ci.yml             // 持续集成工作流
-│   │   └── release.yml        // 发布工作流
-│   └── ISSUE_TEMPLATE/        // Issue模板
-│
-├── .gitignore                 // Git忽略文件配置
-├── .gitattributes             // Git属性配置
-├── README.md                  // 项目主要文档
-├── CONTRIBUTING.md            // 贡献指南
-├── LICENSE                    // 许可证文件
-└── CHANGELOG.md               // 变更日志
-```
+
